# GC-MBO-ML

./: .gitignore  README.md  gc_orderflow_plan_v2.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: throughput_bench.py
config/: config.toml
core/: Cargo.toml  pyproject.toml
notebooks/: phase3_core_features_visual.ipynb
reports/: archive_audit.md  dev_slice_replay.json  gate_iteration2_report.md  milestone1_book.md  model_a_gate.md  model_a_gate_iter2.md  phase1_completion_report.md  phase2_completion_report.md  phase2_lifecycle.md  phase3_completion_report.md  phase4_completion_report.md  phase5_completion_report.md  phase6_completion_report.md  quality_mask.csv  roll_ledger.md  sample_index.md  sign_diagnostic_h120s_from2017.md  sign_diagnostic_h120s_from2023.md  sign_diagnostic_h30s_from2017.md  sign_diagnostic_h30s_from2023.md  step12_5_completion_report.md  step20_completion_report.md  step20_prereqs_report.md  throughput_benchmark.md
scripts/: build_phase3_visual_notebook.py  build_roll_ledger.py  build_sample_index.py  download_archive.py  fetch_bls_calendar.py  inventory_audit.py  make_fomc_events.py  milestone1_demo.py  phase2_lifecycle_demo.py  run_gate.py  run_sign_diagnostic.py  scan_archive_volumes.py
tests/: test_calendar.py  test_engine_synthetic.py  test_features_real.py  test_features_synthetic.py  test_inputs_real.py  test_inputs_synthetic.py  test_labels_synthetic.py  test_lifecycle_real.py  test_lifecycle_synthetic.py  test_model_a.py  test_normalization_real.py  test_normalization_synthetic.py  test_replay_real.py  (+2 more)
(+56 files in other folders)
